Report what the metamodel cannot name instead of breaking the consumer's build
Several shapes the processor accepted produced a metamodel that did not
compile, with no diagnostic: a member whose type is private, or inherited
non-public from another package; a default-package entity referencing its own
nested type; an inner class of a parameterized outer, rendered raw and fatal
under -Werror. Each is now reported under EM-N6 or written in a form javac
accepts. Root discovery honours the @Inherited @Table of an unannotated
subclass wherever an entity is referenced, skips annotation types and
interfaces, and an inherited attribute hidden by an excluded nearer
declaration is no longer emitted in its place.

The runtime rejects an alias ending in an underscore: one alias plus the
separator could otherwise prefix another instance's labels, and an outer join
would hydrate a hollow entity instead of an empty one. The processor mirrors
the rule under EM-E8, and the separator contract test now holds both rules to
observed runtime behaviour. Null elements in IN lists and raw-fragment
arguments fail with a message naming the alternative, raw fragments copy
array arguments so a later mutation does not reach the binding, and every
core SPI record refuses a null component by name.

The CHANGELOG records the two new limitations.